ingress/ingress-fooocus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fooocus-ingress
  namespace: fooocus
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fooocus-service
                port:
                  number: 80
